Add a mapping for non-standard license filenames defined by their usage conventions
This should cover the case when the document endorsing a license suggests naming its file differently: GPL -> `COPYING`, Unlicense -> `UNLICENSE` (as opposed to `LICENSE`), and others I'm likely unaware of.

The list is incomplete and is currently hardcoded inside `utils.ts`.

--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
         "license.filename": {
           "type": "string",
           "default": "LICENSE",
-          "description": "License filename."
+          "description": "License filename used unless one is defined by its usage conventions."
         },
         "license.token": {
           "type": "string",
